refactor & add more loading

--- a/src/Blazor.Loading.Demo/Pages/HomePage.razor
+++ b/src/Blazor.Loading.Demo/Pages/HomePage.razor
@@ -2,27 +2,6 @@
 
 <PageTitle>Blazor Loading Demo</PageTitle>
 
-<Loading01 Color="royalblue" />
-<Loading02 Color="royalblue" />
-<Loading03 Color="royalblue" />
-
-<Loading04 Color="royalblue" />
-<Loading05 Color="royalblue" />
-<Loading06 Color="royalblue" />
-
-<Loading07 Color="royalblue" />
-<Loading08 Color="royalblue" />
-<Loading09 Color="royalblue" />
-
-<Loading10 Color="royalblue" />
-<Loading11 Color="royalblue" />
-<Loading12 Color="royalblue" />
-
-<div style="background-color: rosybrown; text-align: center; padding: 25px; margin: 25px 0">
-    <Loading13 Size="100" />
-    <div style="margin-top:-25px">Loading...</div>
-</div>
-
-<div style="background-color: darkslategrey; text-align: center; padding: 25px">
-    <Loading14 Size="100" />
-</div>
+<NavLink href="css">CSS Loading components -></NavLink>
+<br />
+<NavLink href="svg">SVG Loading components -></NavLink>
