--- a/src/Blazor.Loading/css/RippleLoading.razor
+++ b/src/Blazor.Loading/css/RippleLoading.razor
@@ -1,17 +1,17 @@
-﻿@code {
-    [Parameter] public string Color { get; set; } = "#FFF";
-}
+﻿@namespace Blazor.Loading
+@inherits BaseCssLoading
+
 <style>
     .lds-ripple {
         display: inline-block;
         position: relative;
-        width: 80px;
-        height: 80px;
+        width: @(Size)px;
+        height: @(Size)px;
     }
 
         .lds-ripple div {
             position: absolute;
-            border: 4px solid @Color;
+            border: @(Convert(4))px solid @Color;
             opacity: 1;
             border-radius: 50%;
             animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
@@ -23,24 +23,24 @@
 
     @@keyframes lds-ripple {
         0% {
-            top: 36px;
-            left: 36px;
+            top: @(Convert(36))px;
+            left: @(Convert(36))px;
             width: 0;
             height: 0;
             opacity: 0;
         }
 
         4.9% {
-            top: 36px;
-            left: 36px;
+            top: @(Convert(36))px;
+            left: @(Convert(36))px;
             width: 0;
             height: 0;
             opacity: 0;
         }
 
         5% {
-            top: 36px;
-            left: 36px;
+            top: @(Convert(36))px;
+            left: @(Convert(36))px;
             width: 0;
             height: 0;
             opacity: 1;
@@ -49,8 +49,8 @@
         100% {
             top: 0px;
             left: 0px;
-            width: 72px;
-            height: 72px;
+            width: @(Convert(72))px;
+            height: @(Convert(72))px;
             opacity: 0;
         }
     }
