--- a/src/Blazor.Loading/css/RollerLoading.razor
+++ b/src/Blazor.Loading/css/RollerLoading.razor
@@ -1,28 +1,28 @@
-﻿@code {
-    [Parameter] public string Color { get; set; } = "#FFF";
-}
+﻿@namespace Blazor.Loading
+@inherits BaseCssLoading
+
 <style>
     .blazor-loading-roller {
         display: inline-block;
         position: relative;
-        width: 80px;
-        height: 80px;
+        width: @(Size)px;
+        height: @(Size)px;
     }
 
         .blazor-loading-roller div {
             animation: blazor-loading-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-            transform-origin: 40px 40px;
+            transform-origin: @(Convert(40))px @(Convert(40))px;
         }
 
             .blazor-loading-roller div:after {
                 content: " ";
                 display: block;
                 position: absolute;
-                width: 7px;
-                height: 7px;
+                width: @(Convert(7))px;
+                height: @(Convert(7))px;
                 border-radius: 50%;
                 background: @Color;
-                margin: -4px 0 0 -4px;
+                margin: -@(Convert(4))px 0 0 -@(Convert(4))px;
             }
 
             .blazor-loading-roller div:nth-child(1) {
@@ -30,8 +30,8 @@
             }
 
                 .blazor-loading-roller div:nth-child(1):after {
-                    top: 63px;
-                    left: 63px;
+                    top: @(Convert(63))px;
+                    left: @(Convert(63))px;
                 }
 
             .blazor-loading-roller div:nth-child(2) {
@@ -39,8 +39,8 @@
             }
 
                 .blazor-loading-roller div:nth-child(2):after {
-                    top: 68px;
-                    left: 56px;
+                    top: @(Convert(68))px;
+                    left: @(Convert(56))px;
                 }
 
             .blazor-loading-roller div:nth-child(3) {
@@ -48,8 +48,8 @@
             }
 
                 .blazor-loading-roller div:nth-child(3):after {
-                    top: 71px;
-                    left: 48px;
+                    top: @(Convert(71))px;
+                    left: @(Convert(48))px;
                 }
 
             .blazor-loading-roller div:nth-child(4) {
@@ -57,8 +57,8 @@
             }
 
                 .blazor-loading-roller div:nth-child(4):after {
-                    top: 72px;
-                    left: 40px;
+                    top: @(Convert(72))px;
+                    left: @(Convert(40))px;
                 }
 
             .blazor-loading-roller div:nth-child(5) {
@@ -66,8 +66,8 @@
             }
 
                 .blazor-loading-roller div:nth-child(5):after {
-                    top: 71px;
-                    left: 32px;
+                    top: @(Convert(71))px;
+                    left: @(Convert(32))px;
                 }
 
             .blazor-loading-roller div:nth-child(6) {
@@ -75,8 +75,8 @@
             }
 
                 .blazor-loading-roller div:nth-child(6):after {
-                    top: 68px;
-                    left: 24px;
+                    top: @(Convert(68))px;
+                    left: @(Convert(24))px;
                 }
 
             .blazor-loading-roller div:nth-child(7) {
@@ -84,8 +84,8 @@
             }
 
                 .blazor-loading-roller div:nth-child(7):after {
-                    top: 63px;
-                    left: 17px;
+                    top: @(Convert(63))px;
+                    left: @(Convert(17))px;
                 }
 
             .blazor-loading-roller div:nth-child(8) {
@@ -93,8 +93,8 @@
             }
 
                 .blazor-loading-roller div:nth-child(8):after {
-                    top: 56px;
-                    left: 12px;
+                    top: @(Convert(56))px;
+                    left: @(Convert(12))px;
                 }
 
     @@keyframes blazor-loading-roller {
