--- a/src/Blazor.Loading/css/GridLoading.razor
+++ b/src/Blazor.Loading/css/GridLoading.razor
@@ -1,74 +1,74 @@
-﻿@code {
-    [Parameter] public string Color { get; set; } = "#FFF";
-}
+﻿@namespace Blazor.Loading
+@inherits BaseCssLoading
+
 <style>
     .blazor-loading-grid {
         display: inline-block;
         position: relative;
-        width: 80px;
-        height: 80px;
+        width: @(Size)px;
+        height: @(Size)px;
     }
 
         .blazor-loading-grid div {
             position: absolute;
-            width: 16px;
-            height: 16px;
+            width: @(Convert(16))px;
+            height: @(Convert(16))px;
             border-radius: 50%;
             background: @Color;
             animation: blazor-loading-grid 1.2s linear infinite;
         }
 
             .blazor-loading-grid div:nth-child(1) {
-                top: 8px;
-                left: 8px;
+                top: @(Convert(8))px;
+                left: @(Convert(8))px;
                 animation-delay: 0s;
             }
 
             .blazor-loading-grid div:nth-child(2) {
-                top: 8px;
-                left: 32px;
+                top: @(Convert(8))px;
+                left: @(Convert(32))px;
                 animation-delay: -0.4s;
             }
 
             .blazor-loading-grid div:nth-child(3) {
-                top: 8px;
-                left: 56px;
+                top: @(Convert(8))px;
+                left: @(Convert(56))px;
                 animation-delay: -0.8s;
             }
 
             .blazor-loading-grid div:nth-child(4) {
-                top: 32px;
-                left: 8px;
+                top: @(Convert(32))px;
+                left: @(Convert(8))px;
                 animation-delay: -0.4s;
             }
 
             .blazor-loading-grid div:nth-child(5) {
-                top: 32px;
-                left: 32px;
+                top: @(Convert(32))px;
+                left: @(Convert(32))px;
                 animation-delay: -0.8s;
             }
 
             .blazor-loading-grid div:nth-child(6) {
-                top: 32px;
-                left: 56px;
+                top: @(Convert(32))px;
+                left: @(Convert(56))px;
                 animation-delay: -1.2s;
             }
 
             .blazor-loading-grid div:nth-child(7) {
-                top: 56px;
-                left: 8px;
+                top: @(Convert(56))px;
+                left: @(Convert(8))px;
                 animation-delay: -0.8s;
             }
 
             .blazor-loading-grid div:nth-child(8) {
-                top: 56px;
-                left: 32px;
+                top: @(Convert(56))px;
+                left: @(Convert(32))px;
                 animation-delay: -1.2s;
             }
 
             .blazor-loading-grid div:nth-child(9) {
-                top: 56px;
-                left: 56px;
+                top: @(Convert(56))px;
+                left: @(Convert(56))px;
                 animation-delay: -1.6s;
             }
 
