--- a/src/Blazor.Loading/css/HourglassLoading.razor
+++ b/src/Blazor.Loading/css/HourglassLoading.razor
@@ -1,12 +1,12 @@
-﻿@code {
-    [Parameter] public string Color { get; set; } = "#FFF";
-}
+﻿@namespace Blazor.Loading
+@inherits BaseCssLoading
+
 <style>
     .blazor-loading-hourglass {
         display: inline-block;
         position: relative;
-        width: 80px;
-        height: 80px;
+        width: @(Size)px;
+        height: @(Size)px;
     }
 
         .blazor-loading-hourglass:after {
@@ -15,9 +15,9 @@
             border-radius: 50%;
             width: 0;
             height: 0;
-            margin: 8px;
+            margin: @(Convert(8))px;
             box-sizing: border-box;
-            border: 32px solid @Color;
+            border: @(Convert(32))px solid @Color;
             border-color: @Color transparent @Color transparent;
             animation: blazor-loading-hourglass 1.2s infinite;
         }
