--- a/src/Blazor.Loading.Demo/Pages/CssLoadingPage.razor
+++ b/src/Blazor.Loading.Demo/Pages/CssLoadingPage.razor
@@ -1,10 +1,15 @@
 ﻿@page "/css"
 
-<PageTitle>Blazor Loading Demo</PageTitle>
+<PageTitle>Blazor Loading Demo - CSS</PageTitle>
 
+<NavLink href="/">Home -></NavLink>
 <NavLink href="svg">SVG Loading components -></NavLink>
+<NavLink href="bg">Background Loading components -></NavLink>
 
 <style>
+    a {
+        display: block;
+    }
     .container {
         display: flex;
         align-items: center;
