--- a/src/Blazor.Loading.Demo/Pages/HomePage.razor
+++ b/src/Blazor.Loading.Demo/Pages/HomePage.razor
@@ -5,3 +5,5 @@
 <NavLink href="css">CSS Loading components -></NavLink>
 <br />
 <NavLink href="svg">SVG Loading components -></NavLink>
+<br />
+<NavLink href="bg">Background Loading components -></NavLink>
