--- a/src/Blazor.Loading.Demo/Pages/SvgLoadingsPage.razor
+++ b/src/Blazor.Loading.Demo/Pages/SvgLoadingsPage.razor
@@ -24,91 +24,33 @@
     .wrapper {
         padding: 25px;
         text-align: center;
-        background: #aaa;
+        background: #333;
     }
 </style>
 
 <div class="container">
-    <div class="wrapper">
-        <SunnyLoading Size="100" />
-        <div style="margin-top:-25px">Loading...</div>
-    </div>
-
-    <div class="wrapper">
-        <GiftLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <AtomLoading Size="100" />
-    </div>
+    <div class="wrapper"><SunnyLoading Size="100" /></div>
+    <div class="wrapper"><GiftLoading Size="100" /></div>
+    <div class="wrapper"><AtomLoading Size="100" /></div>
+    <div class="wrapper"><BallLoading Size="100" /></div>
+    <div class="wrapper"><BallsLoading Size="100" /></div>
+    <div class="wrapper"><BarChartLoading Size="100" /></div>
 </div>
 
 <div class="container">
-    <div class="wrapper">
-        <BallLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <BallsLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <BarChartLoading Size="100" />
-    </div>
+    <div class="wrapper"><FadingBarsLoading Size="100" /></div>
+    <div class="wrapper"><BasketballLoading Size="100" /></div>
+    <div class="wrapper"><BeanEaterLoading Size="100" /></div>
+    <div class="wrapper"><BlocksLoading Size="100" /></div>
+    <div class="wrapper"><BlueCatLoading Size="100" /></div>
+    <div class="wrapper"><BooksLoading Size="100" /></div>
 </div>
 
 <div class="container">
-    <div class="wrapper">
-        <FadingBarsLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <BasketballLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <BeanEaterLoading Size="100" />
-    </div>
-</div>
-
-<div class="container">
-    <div class="wrapper">
-        <BlocksLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <BlueCatLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <BooksLoading Size="100" />
-    </div>
-</div>
-
-<div class="container">
-    <div class="wrapper">
-        <BricksLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <BubbleLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <BucketLoading Size="100" />
-    </div>
-</div>
-
-<div class="container">
-    <div class="wrapper">
-        <CameraLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <ChunkLoading Size="100" />
-    </div>
-
-    <div class="wrapper">
-        <ClockLoading Size="100" />
-    </div>
+    <div class="wrapper"><BricksLoading Size="100" /></div>
+    <div class="wrapper"><BubbleLoading Size="100" /></div>
+    <div class="wrapper"><BucketLoading Size="100" /></div>
+    <div class="wrapper"><CameraLoading Size="100" /></div>
+    <div class="wrapper"><ChunkLoading Size="100" /></div>
+    <div class="wrapper"><ClockLoading Size="100" /></div>
 </div>
